Основные эндпоинты для addresses
